Updating static urls

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 </head>
 <body>
     <div class="profile-container">
-        <img src="/static/img/profpic.JPEG" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/profpic.JPEG?raw=true" alt="Profile Picture" class="profile-pic">
     </div>
     <p class="profile-name">Matt Bu</p>
     <p class="profile-title">Sr. Software Engineer</p>
@@ -195,15 +195,15 @@
     <!-- Horizontal Overlapping Cards Section -->
     <div class="overlap-container">
         <div class="card">
-            <img src="/static/img/brazil.JPG" alt="Photo 1">
+            <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/brazil.JPG?raw=true" alt="Photo 1">
             <div class="card-content">Brazil</div>
         </div>
         <div class="card">
-            <img src="/static/img/zermatt.JPG" alt="Photo 2">
+            <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/zermatt.JPG?raw=true" alt="Photo 2">
             <div class="card-content">Switzerland</div>
         </div>
         <div class="card">
-            <img src="/static/img/spain.JPEG" alt="Photo 3">
+            <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/spain.JPEG?raw=true" alt="Photo 3">
             <div class="card-content">Spain</div>
         </div>
     </div>
