--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Mobile Template</title>
+    <title>Matt Bu | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: "Lexend", serif;
+            font-optical-sizing: auto;
+            font-weight: 400;
+            font-style: normal;
             display: flex;
             flex-direction: column;
             justify-content: center;
