--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <style>
         body {
-            margin: 0;
+            margin: 100px;
             padding: 0;
             font-family: "Lexend", serif;
             font-optical-sizing: auto;
@@ -33,7 +33,8 @@
             height: 100px;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 15px;
+            margin-bottom: -35px;
+            border: 3px solid #ddd;
         }
 
         .profile-name {
@@ -45,7 +46,7 @@
         .profile-title {
             font-size: 1rem;
             color: gray;
-            margin: 0 0 10px 0;
+            margin: 0 0 45px 0;
         }
 
         .timeline-container {
@@ -127,6 +128,7 @@
             justify-content: center;
             align-items: center;
             margin-top: 40px;
+            margin-bottom: 40px;
             gap: 20px;
             position: relative;
         }
@@ -191,11 +193,13 @@
 </head>
 <body>
     <div class="profile-container">
-        <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/profpic.JPEG?raw=true" alt="Profile Picture" class="profile-pic">
+        <img src="/static/img/profpic.jpg" alt="Profile Picture" class="profile-pic">
     </div>
-    <p class="profile-name">Matt Bu</p>
+    <h2>Matt Bu</h2>
     <p class="profile-title">Sr. Software Engineer</p>
 
+
+    <h2>Recent Adventures</h2>
     <!-- Horizontal Overlapping Cards Section -->
     <div class="overlap-container">
         <div class="card">
@@ -211,6 +215,9 @@
             <div class="card-content">Spain</div>
         </div>
     </div>
+    <br>
+
+    <h2>Experience</h2>
 
     <div class="present-text">Present</div> <!-- Text on top of the timeline -->
 
@@ -218,6 +225,7 @@
         <div class="timeline-line"></div> <!-- Vertical line -->
         <div class="timeline-item">
             <div class="timeline-content">
+                <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/meta-logo.png?raw=true" alt="Photo 3">
                 <h3>Meta</h3>
                 <p>Senior Software Engineer</p>
             </div>
