--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </head>
 <body>
     <div class="profile-container">
-        <img src="/static/img/profpic.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/profpic.jpg" alt="Profile Picture" class="profile-pic">
     </div>
     <h2>Matt Bu</h2>
     <p class="profile-title">Sr. Software Engineer</p>
