--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             width: 250px;
-            text-align: left;
+            text-align: center;
         }
 
         .timeline-content-alt {
@@ -96,8 +96,8 @@
             border-radius: 18px; /* Increased border-radius */
             padding: 20px;
             width: 250px;
-            text-align: left;
             border: 1px solid #ddd;
+            color: gray;
         }
 
         .timeline-content h3 {
@@ -109,6 +109,7 @@
         .timeline-content p {
             font-size: 1em;
             color: #555;
+            text-align: center;
         }
 
         .timeline-bottom-dot {
@@ -189,11 +190,24 @@
             color: white;
             font-weight: bold;
         }
+
+        .timeline-content h3, .timeline-content-alt h3 {
+            text-align: center;
+        }
+
+        .logo {
+            object-fit: cover;
+            width: 80px;
+            height: 80px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
     <div class="profile-container">
-        <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/profpic.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/profpic.jpg?raw=true" alt="Profile Picture" class="profile-pic">
     </div>
     <h2>Matt Bu</h2>
     <p class="profile-title">Sr. Software Engineer</p>
@@ -225,21 +239,26 @@
         <div class="timeline-line"></div> <!-- Vertical line -->
         <div class="timeline-item">
             <div class="timeline-content">
-                <img src="https://github.com/matt-bu/portfolio/blob/main/static/img/meta-logo.png?raw=true" alt="Photo 3">
+                <img class="logo" src="https://github.com/matt-bu/portfolio/blob/main/static/img/meta-logo.png?raw=true" alt="meta">
                 <h3>Meta</h3>
                 <p>Senior Software Engineer</p>
+                <p>2025-Present</p>
             </div>
         </div>
         <div class="timeline-item">
             <div class="timeline-content-alt">
-                <h3>Event 2</h3>
-                <p>This is the description of the second event in the timeline.</p>
+                <img class="logo" src="https://github.com/matt-bu/portfolio/blob/main/static/img/amzn-logo.png?raw=true" alt="meta">
+                <h3>Amazon</h3>
+                <p>Software Dev Engineer</p>
+                <p>2020-2025</p>
             </div>
         </div>
         <div class="timeline-item">
             <div class="timeline-content-alt">
-                <h3>Event 3</h3>
-                <p>This is the description of the third event in the timeline.</p>
+                <img class="logo" src="https://github.com/matt-bu/portfolio/blob/main/static/img/bb-logo.png?raw=true" alt="meta">
+                <h3>Bloomberg</h3>
+                <p>Software Engineer</p>
+                <p>2017-2020</p>
             </div>
         </div>
         <div class="timeline-bottom-dot"></div> <!-- Small dot at the bottom -->
